@@ -395,6 +395,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 714) "plainlinks" class issues in IE, Opera
 * (bug 4317) Inconsistent "broken redirects" messages
 * Default interface text for "selflinks" tweaked
+* Removed broken wgAllowAnonymousMinor and added new group right minoredit
+
 
 === Caveats ===
 
